20 May 2025: Yorgos
	- Merge #1285:  RST man pages. It introduces restructuredText man pages
	  to sync the online and source code man page documentation.
	  The templated man pages (*.in) are still part of the repo but
	  generated with docutils from their .rst counterpart.
	  Documentation on how to generate those (mainly for core developers)
	  is in README.man.
	- Add more checks about respip in unbound-checkconf.
	  Also fixes #310: unbound-checkconf not reporting RPZ configuration
	  error.

19 May 2025: Wouter
	- Fix for cname chain length with qtype ANY and qname minimisation.
	  Thanks to Jim Greenwood from Nominet for the report.

15 May 2025: Wouter
	- Fix config of slab values when there is no config file.

13 May 2025: Yorgos
	- Fix #1284: NULL pointer deref in az_find_nsec_cover() (latent bug)
	  by adding a log_assert() to safeguard future development.
	- Fix #1282: log-destaddr fail on long ipv6 addresses.

13 May 2025: Wouter
	- Change default for so-sndbuf to 1m, to mitigate a cross-layer
	  issue where the UDP socket send buffers are exhausted waiting
	  for ARP/NDP resolution. Thanks to Reflyable for the report.
	- Adjusted so-sndbuf default to 4m.

12 May 2025: Yorgos
	- Merge #1280: Fix auth nsec3 code. Fixes NSEC3 code to not break on
	  broken auth zones that include unsigned out of zone (above apex)
	  data. Could lead to hang while trying to prove a wildcard answer.

12 May 2025: Wouter
	- Fix #1283: Unsafe usage of atoi() while parsing the configuration
	  file.

9 May 2025: Wouter
	- Fix #1281: forward-zone "name: ." conflicts with auth-zone "name: ."
	  in 1.23.0, but worked in 1.22.0.

5 May 2025: Yorgos
	- Sync unbound and unbound-checkconf log output for unknown modules.

29 April 2025: Wouter
	- Fix for parallel build of dnstap protoc-c output.
	- Fix dnstap to use protoc.

29 April 2025: Yorgos
	- Merge #1276: Auto-configure '-slabs' values.

28 April 2025: Yorgos
	- Merge #1275: Use macros for the fr_check_changed* functions.
